# nocompila8

./: .gitignore  CAMBIOS_VISUALIZACIONES.md  DEMO_SHOWCASE.md  PLAN_DE_ACCION.md  README.md  requirements.txt  run_adk_web.bat  run_adk_web.ps1  setup.py
.venv_telegram/: pyvenv.cfg
.venv_telegram/Scripts/: activate  activate.bat  fixup_admin_v2_keywords.py  fixup_bigtable_v2_keywords.py
examples/: demo.py
movility-ai/: .env.example  .gitignore  HACKATHON_ALINEACION.md  README.md  RESUMEN_SISTEMA.md  SERVIDOR_WEB.md  SOLUCION_TELEGRAM_BLOQUEADO.md  agent.py  app.html  app.py  demo_route_planner.py  pyproject.toml  run_dev_server.py  run_interactive.py  setup.ps1  setup.sh  setup_pip.ps1  setup_simple.ps1  telegram_bot_direct.py  telegram_bot_rest.py  telegram_bot_simple.py  test_quick.py  validate_structure.py  verify_telegram_token.py
movility-ai/movility_ai/: __init__.py  __main__.py  agent.py  prompt.py
movility-ai/movility_ai/shared_libraries/: __init__.py  config.py  constants.py  types.py
movility-ai/movility_ai/sub_agents/: __init__.py
movility-ai/movility_ai/sub_agents/alertas/: __init__.py  agent.py  monitor.py  prompt.py
movility-ai/movility_ai/sub_agents/analyze/: __init__.py  agent.py  prompt.py
movility-ai/movility_ai/sub_agents/clean/: __init__.py  agent.py  prompt.py
movility-ai/movility_ai/sub_agents/flowsense/: __init__.py  agent.py  predictor.py  prompt.py
movility-ai/movility_ai/sub_agents/ingest/: __init__.py  agent.py  prompt.py
movility-ai/movility_ai/sub_agents/insight/: __init__.py  agent.py  analytics.py  prompt.py
movility-ai/movility_ai/sub_agents/pathfinder/: __init__.py  agent.py  prompt.py  tools.py
movility-ai/movility_ai/sub_agents/report/: __init__.py  agent.py  prompt.py
movility-ai/movility_ai/sub_agents/route_planner/: __init__.py  agent.py  prompt.py
movility-ai/movility_ai/tools/: __init__.py
movility-ai/movility_ai/tools/providers/: encicla.py  gtfs_metro.py  openweather.py  osrm.py
movility-ai/tests/: __init__.py
movility-ai/tests/unit/: test_agents.py
movility_ai/: README.md  __init__.py  agent.py  prompt.py  pytest.ini  requirements.txt
movility_ai/demo_assets/: BUSQUEDA_IMAGENES.md  DATOS_REALES_MEDELLIN.md
(+42 files in other folders)
